Fix a crash